[gd_scene load_steps=9 format=3 uid="uid://c6570n2s1k1wv"]

[ext_resource type="Theme" uid="uid://dged4041swr1" path="res://theme.tres" id="1_1wikn"]
[ext_resource type="Script" path="res://scripts/mod_manager.gd" id="2_37t4h"]
[ext_resource type="Script" path="res://scripts/path_container.gd" id="3_a8731"]
[ext_resource type="Script" path="res://scripts/mod_loader_container.gd" id="4_vi72b"]
[ext_resource type="Script" path="res://scripts/mod_list_container.gd" id="5_pbjar"]
[ext_resource type="StyleBox" uid="uid://dl64sodill7qu" path="res://panel_style_box.tres" id="6_7hd73"]
[ext_resource type="Script" path="res://scripts/mod_manager_config_container.gd" id="7_wuify"]

[sub_resource type="LabelSettings" id="LabelSettings_g2u8q"]
line_spacing = -6.0
font_color = Color(0.753984, 0.753984, 0.753984, 1)

[node name="ModManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1wikn")
script = ExtResource("2_37t4h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PathContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
script = ExtResource("3_a8731")

[node name="PathLabel" type="Label" parent="MarginContainer/MainContainer/PathContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "GSS Path: C:/"

[node name="RunGameButton" type="Button" parent="MarginContainer/MainContainer/PathContainer"]
layout_mode = 2
text = "Run GSS"

[node name="ChangePathButton" type="Button" parent="MarginContainer/MainContainer/PathContainer"]
layout_mode = 2
text = "Change path"

[node name="ModLoaderContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
script = ExtResource("4_vi72b")

[node name="ModLoaderLabel" type="Label" parent="MarginContainer/MainContainer/ModLoaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Mod loader not installed"

[node name="ModLoaderInstallButton" type="Button" parent="MarginContainer/MainContainer/ModLoaderContainer"]
layout_mode = 2
text = "Install mod loader"

[node name="Separator" type="MarginContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4

[node name="ModListContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
script = ExtResource("5_pbjar")

[node name="ModListLabel" type="Label" parent="MarginContainer/MainContainer/ModListContainer"]
layout_mode = 2
text = "Mod list [0]"

[node name="RefreshButton" type="Button" parent="MarginContainer/MainContainer/ModListContainer"]
layout_mode = 2
text = "Refresh"

[node name="InstallModButton" type="Button" parent="MarginContainer/MainContainer/ModListContainer"]
layout_mode = 2
text = "Install mod"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainContainer/MarginContainer"]
layout_mode = 2

[node name="ModContainers" type="VBoxContainer" parent="MarginContainer/MainContainer/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="ModManagerContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="ModManagerLabel" type="Label" parent="MarginContainer/MainContainer/ModManagerContainer"]
layout_mode = 2
text = "GSS Mod Manager"

[node name="ConfigureButton" type="Button" parent="MarginContainer/MainContainer/ModManagerContainer"]
layout_mode = 2
text = "Configure"

[node name="PanelMarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 8

[node name="PanelContainer" type="PanelContainer" parent="PanelMarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("6_7hd73")

[node name="MarginContainer" type="MarginContainer" parent="PanelMarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 4

[node name="ConfigContainer" type="VBoxContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ModManagerConfigContainer" type="VBoxContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
script = ExtResource("7_wuify")

[node name="CheckForUpdates" type="VBoxContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer"]
layout_mode = 2

[node name="OptionsContainer" type="HBoxContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/CheckForUpdates"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/CheckForUpdates/OptionsContainer"]
layout_mode = 2
text = "Check for updates"

[node name="CheckBox" type="CheckBox" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/CheckForUpdates/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true

[node name="ResetToDefault" type="Button" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/CheckForUpdates/OptionsContainer"]
layout_mode = 2
text = "Reset to default"

[node name="DescriptionLabel" type="Label" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/CheckForUpdates"]
layout_mode = 2
theme_override_colors/font_color = Color(0.712129, 0.712129, 0.712129, 1)
theme_override_font_sizes/font_size = 16
text = "Should GSS Mod Manager check for updates when started?"
label_settings = SubResource("LabelSettings_g2u8q")

[node name="LaunchGSSWithGUIConsole" type="VBoxContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer"]
layout_mode = 2

[node name="OptionsContainer" type="HBoxContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/LaunchGSSWithGUIConsole"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/LaunchGSSWithGUIConsole/OptionsContainer"]
layout_mode = 2
text = "Launch GSS with GUI console"

[node name="CheckBox" type="CheckBox" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/LaunchGSSWithGUIConsole/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetToDefault" type="Button" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/LaunchGSSWithGUIConsole/OptionsContainer"]
layout_mode = 2
text = "Reset to default"

[node name="DescriptionLabel" type="Label" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/LaunchGSSWithGUIConsole"]
layout_mode = 2
theme_override_colors/font_color = Color(0.712129, 0.712129, 0.712129, 1)
theme_override_font_sizes/font_size = 16
text = "Should Grocery Store Simulator launch with a debugging GUI console?"
label_settings = SubResource("LabelSettings_g2u8q")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="ModConfigContainer" type="VBoxContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 24

[node name="ConfigControls" type="HBoxContainer" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ConfigControls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Save"

[node name="CancelButton" type="Button" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ConfigControls"]
layout_mode = 2
text = "Cancel"

[node name="CopyLogButton" type="Button" parent="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ConfigControls"]
visible = false
layout_mode = 2
text = "Copy log"

[node name="PopupMarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 160
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 160

[node name="PanelContainer" type="PanelContainer" parent="PopupMarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("6_7hd73")

[node name="MainContainer" type="VBoxContainer" parent="PopupMarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="UpdateLabel" type="Label" parent="PopupMarginContainer/PanelContainer/MainContainer"]
layout_mode = 2
text = "A new version of GSS Mod Manager is avaliable!
(current: ; latest: )
Update description:"
horizontal_alignment = 1

[node name="DescriptionMargin" type="MarginContainer" parent="PopupMarginContainer/PanelContainer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 24

[node name="UpdateDescriptionLabel" type="Label" parent="PopupMarginContainer/PanelContainer/MainContainer/DescriptionMargin"]
layout_mode = 2

[node name="ControlsContainer" type="HBoxContainer" parent="PopupMarginContainer/PanelContainer/MainContainer"]
layout_mode = 2
alignment = 1

[node name="OpenUpdateLinkButton" type="Button" parent="PopupMarginContainer/PanelContainer/MainContainer/ControlsContainer"]
layout_mode = 2
text = "Open update link"

[node name="CloseButton" type="Button" parent="PopupMarginContainer/PanelContainer/MainContainer/ControlsContainer"]
layout_mode = 2
text = "Close"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(352, 180)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
filters = PackedStringArray("*.zip,*.rar,*.7z;Archive Files")
use_native_dialog = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MarginContainer/MainContainer/PathContainer/RunGameButton" to="MarginContainer/MainContainer/PathContainer" method="_on_run_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/PathContainer/ChangePathButton" to="MarginContainer/MainContainer/PathContainer" method="_on_change_path_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ModLoaderContainer/ModLoaderInstallButton" to="MarginContainer/MainContainer/ModLoaderContainer" method="_on_mod_loader_install_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ModListContainer/RefreshButton" to="MarginContainer/MainContainer/ModListContainer" method="_on_refresh_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ModListContainer/InstallModButton" to="MarginContainer/MainContainer/ModListContainer" method="_on_install_mod_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ModManagerContainer/ConfigureButton" to="." method="_on_configure_button_pressed"]
[connection signal="toggled" from="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/CheckForUpdates/OptionsContainer/CheckBox" to="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer" method="_on_check_for_updates_toggled"]
[connection signal="pressed" from="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/CheckForUpdates/OptionsContainer/ResetToDefault" to="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer" method="_on_reset_check_for_updates_pressed"]
[connection signal="toggled" from="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/LaunchGSSWithGUIConsole/OptionsContainer/CheckBox" to="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer" method="_on_launch_gss_with_gui_console_toggled"]
[connection signal="pressed" from="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer/LaunchGSSWithGUIConsole/OptionsContainer/ResetToDefault" to="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ModManagerConfigContainer" method="_on_reset_launch_gss_with_gui_console_pressed"]
[connection signal="pressed" from="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ConfigControls/SaveButton" to="." method="_on_save_config_button_pressed"]
[connection signal="pressed" from="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ConfigControls/CancelButton" to="." method="_on_cancel_config_button_pressed"]
[connection signal="pressed" from="PanelMarginContainer/PanelContainer/MarginContainer/ConfigContainer/ConfigControls/CopyLogButton" to="." method="_on_copy_log_button_pressed"]
[connection signal="pressed" from="PopupMarginContainer/PanelContainer/MainContainer/ControlsContainer/OpenUpdateLinkButton" to="." method="_on_open_update_link_button_pressed"]
[connection signal="pressed" from="PopupMarginContainer/PanelContainer/MainContainer/ControlsContainer/CloseButton" to="." method="_on_update_close_button_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_gss_path_selected"]
[connection signal="file_selected" from="FileDialog" to="MarginContainer/MainContainer/ModListContainer" method="_on_file_dialog_mod_selected"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_completed"]
